# acervo

./: .env_local  README.md  docker-compose.yml  pyproject.toml  settings.py
.github/workflows/: ci.yml
books_collection/: app.py  settings.py
books_collection/account/: enums.py  models.py  router.py  schemas.py  service.py
books_collection/auth/: router.py  schemas.py  security.py
books_collection/book/: models.py  router.py  schemas.py
books_collection/common/: dependencies.py  filters.py
books_collection/common/exception/: errors.py  exception_handler.py
books_collection/database/: config.py
books_collection/novelist/: models.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: d729d55002e7_create_tables_accounts_novelist_books.py  e6a2fa399692_update_novelist_name_property_to_unique.py  f82a55d9377a_add_state_field_to_account_model.py
tests/: conftest.py  test_ci.py
tests/account/: factories.py  test_account.py  test_route.py  test_service.py
tests/auth/: test_security.py  test_token.py
tests/novelist/: test_route.py
